--- a/templates/home/index.twig
+++ b/templates/home/index.twig
@@ -97,13 +97,7 @@
         </div> 
       </div>
       <div class="divider-detail">
-        <svg width="2000" height="25" viewBox="0 0 2000 25" fill="none" xmlns="http://www.w3.org/2000/svg">
-          <path d="M1367.45 25C1374.36 25 1379.96 19.4036 1379.96 12.5C1379.96 5.59644 1374.36 0 1367.45 0C1360.54 0 1354.93 5.59644 1354.93 12.5C1354.93 19.4036 1360.54 25 1367.45 25Z" fill="#464F53"/>
-          <path d="M1354.93 0.116211V24.8837" stroke="#464F53" stroke-miterlimit="10"/>
-          <path d="M1355 4H0" stroke="#464F53" stroke-miterlimit="10"/>
-          <path d="M1355 21H0" stroke="#464F53" stroke-miterlimit="10"/>
-          <path d="M2000 12H1379" stroke="#464F53" stroke-miterlimit="10"/>
-          </svg>
+    {% include '_partials/svg/lg-round-grey.svg' %}
       </div>
       <div class="d-lg-flex">
         <div class="left-size no-image">
@@ -115,17 +109,9 @@
           </p>
           <div class="btn">
             <a href="/residential">
-              <svg class='btn-icon' width="37" height="24" viewBox="0 0 37 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M11.395 1.91535L25.8714 12L11.395 22.0846V1.91535Z" stroke="#F98080" stroke-width="2"/>
-                <path d="M25.3054 12H36.3054" stroke="#F98080" stroke-width="2" stroke-miterlimit="10"/>
-                <path d="M0 12H11" stroke="#F98080" stroke-width="2" stroke-miterlimit="10"/>
-              </svg>
+                  {% include '_partials/svg/btn-icon-left.svg' %}
               <p>Learn more</p>
-              <div class="btn-arrow">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M22.4142 12.0001L14 20.4144L12.5858 19.0002L18.5858 13.0001H2V11.0001H18.5858L12.5858 5.00015L14 3.58594L22.4142 12.0001Z" fill="white"/>
-                </svg>
-              </div>
+                   {% include '_partials/svg/btn-icon-arrow.svg' %}
             </a>
           </div>
         </div>
@@ -162,12 +148,7 @@
       </div>
 
       <div class="divider-detail">
-        <svg x="0px" y="0px" viewBox="0 0 2000 24">
-          <path class="st0" d="M1367.4,0h-20v24h20c6.6,0,12-5.4,12-12C1379.4,5.4,1374.1,0,1367.4,0z" fill="#464F53"/>
-          <path class="st1" d="M1348,5.3H0" stroke="#464F53" stroke-miterlimit="10"/>
-          <path class="st1" d="M1348,19H0" stroke="#464F53" stroke-miterlimit="10"/>
-          <path class="st1" d="M2000,12h-621" stroke="#464F53" stroke-miterlimit="10"/>
-        </svg>
+           {% include '_partials/svg/lg-cap-grey.svg' %}
       </div>
   
 
@@ -181,17 +162,11 @@
           </p>
           <div class="btn">
             <a href="/commercial">
-              <svg class='btn-icon' width="37" height="24" viewBox="0 0 37 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M11.395 1.91535L25.8714 12L11.395 22.0846V1.91535Z" stroke="#F98080" stroke-width="2"/>
-                <path d="M25.3054 12H36.3054" stroke="#F98080" stroke-width="2" stroke-miterlimit="10"/>
-                <path d="M0 12H11" stroke="#F98080" stroke-width="2" stroke-miterlimit="10"/>
-              </svg>
+                  {% include '_partials/svg/btn-icon-left.svg' %}
               <p>Learn more</p>
-              <div class="btn-arrow">
-                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
-                <path d="M22.4142 12.0001L14 20.4144L12.5858 19.0002L18.5858 13.0001H2V11.0001H18.5858L12.5858 5.00015L14 3.58594L22.4142 12.0001Z" fill="white"/>
-                </svg>
-              </div>
+
+                   {% include '_partials/svg/btn-icon-arrow.svg' %}
+
             </a>
           </div>
         </div>
@@ -263,13 +238,14 @@
             <div>
               <p class="pre-header">WE’RE ALL EARS</p>
               <h2>Contact Us </h2>
+              <div class="divider-detail"> 
+                {% include '_partials/svg/sm-cap-red.svg' %}
+              </div>
             </div>
   
-            <div class="divider-detail"> 
-              {% include '_partials/svg/sm-cap-red.svg' %}
-            </div>
+
   
-            <div>
+            <div class="spread">
               <p class="intro-text">
                 We serve residents and business from Wellington to Ōtaki and everywhere in between. Call us to talk through your project or email our team for a quote. We’ll get back to you as soon as we can.
               </p>
@@ -299,12 +275,12 @@
         <div class="half right bg-grey d-flex justify-content-between flex-column">
           <div class="bg-img" style="background-image: url('{{ asset2.getUrl(imgQuality) }}">
           </div>
-          <div class="max-800">
+          <div class="form-wrapper">
             <div>
               <p class="pre-header">WE’RE ALL EARS</p>
               <h3>Contact Us </h3>
             </div>
-            <p>  We serve residents and business from Wellington to Ōtaki and everywhere in between. Call us to talk through your project or email our team for a quote. We’ll get back to you as soon as we can.</p>
+              {% include '_partials/contactForm.twig' %}
           </div>
         </div>
       </div>
