--- a/templates/_layout.twig
+++ b/templates/_layout.twig
@@ -1,34 +1,27 @@
 <!DOCTYPE html>
 <html lang="{{ craft.app.language }}">
-  <head>
-    <meta charset="utf-8"/>
-    <title>{{ siteName }}</title>
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    {% do view.registerCssFile(url('scss/assets/scss/style.scss')) %}
-    {% do view.registerJsFile(url('js/assets/js/script.js')) %}
-    {% do craft.app.view.registerCssFile('@web/styles.css') %}
-    <link rel="stylesheet" href="https://use.typekit.net/cic1emf.css">
-  </head>
-  <header>
+<head>
+  <meta charset="utf-8"/>
+  <title>{{ siteName }}</title>
+  <meta content="width=device-width, initial-scale=1.0" name="viewport">
+  <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css'>
+  {% do view.registerCssFile(url('scss/assets/scss/style.scss')) %}
+  {% do view.registerJsFile(url('js/assets/js/script.js')) %}
+  {% do craft.app.view.registerCssFile('@web/styles.css') %}
+  <link rel="stylesheet" href="https://use.typekit.net/cic1emf.css">
+</head>
+<header>
+
+</header>
+  
+<body >
   {% include "_partials/navigation.twig" %}
-  </header>
-
-
- {# <body class="{{ craft.app.request.fullPath|split('/')|last|kebab }}"> #}
-  <body >
-    {% block content %}
-    {% endblock %}
-
-   
+  {% block content %}
+  {% endblock %}
   {% include "_partials/footer.twig" %}
-
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-
-
-  </body>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
+  <script src='https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js'></script>
+  <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+  <script  src="/nav-bar.js"></script>
+</body>
 </html>
