--- a/templates/_partials/res-comm/inner-nav-page.twig
+++ b/templates/_partials/res-comm/inner-nav-page.twig
@@ -22,7 +22,7 @@
             <div class="wrapper-svg">
         <div class="bg-img bg-height" style="background-image: url('{{ featureImage.getUrl(imgQuality) }}');">
             <div class="absolute-wrapper">
-            <div class="absolute-svg">
+            <div class="single-svg">
             {% include '_partials/svg/lg-cap-grey.svg' %}
             </div>
             </div>
