--- a/templates/_partials/upsSection.twig
+++ b/templates/_partials/upsSection.twig
@@ -2,7 +2,7 @@
         <div class="wrapper dark">
             <div>
             <div class="">
-                <h2 class="text-center">When you hire a Get Amped electrician you get service with a smile</h2>
+                <h2 class="">When you hire a Get Amped electrician you get service with a smile</h2>
             </div>
             <div class="d-sm-flex  flex-wrap mt-2">
                 <div class="d-flex  py-4 border-btm ">
