--- a/templates/blog/_entry.twig
+++ b/templates/blog/_entry.twig
@@ -1,4 +1,9 @@
 {% extends "_layout.twig" %}
+
+{# Images on this page weight #}
+{% set imgQuality = {
+  quality: 60,
+} %}
 {% set currentEntry = entry %}
 {% set entries = craft.entries()
     .section('blog')
@@ -51,7 +56,7 @@
          <div class="wrapper">
             <div class="d-lg-flex small-image">
                <div class="left-size">
-                   <img src="{{ featureImage.getUrl('blogHero') }}" alt="Customer profile image">
+                   <img src="{{ featureImage.getUrl(imgQuality) }}" alt="Customer profile image">
                </div>
 
                <div class="right-size">
