--- a/templates/blog/_entry.twig
+++ b/templates/blog/_entry.twig
@@ -56,7 +56,7 @@
          <div class="wrapper">
             <div class="d-lg-flex small-image">
                <div class="left-size">
-                   <img src="{{ featureImage.getUrl(imgQuality) }}" alt="Customer profile image">
+                   {# <img src="{{ featureImage.getUrl('imgQuality') }}" alt="Customer profile image"> #}
                </div>
 
                <div class="right-size">
