--- a/templates/home/index.twig
+++ b/templates/home/index.twig
@@ -257,7 +257,7 @@
                     <div class="">
                       <img src="/uploads/siteImages/flag.svg" alt="Decorative icon - flag">
                     </div>
-                    <div>{{contactDetails.companyAddress}}</div>
+                    <div>{{contactDetails.companyAddress}}</p></div>
                   </div>
 
                   <div class="contact-detail">  
