--- a/web/assets/scss/style.scss
+++ b/web/assets/scss/style.scss
@@ -150,15 +150,26 @@ p.pre-header{
       font-family: $button;
       margin: 0 10px 0 10px;
       color:$white;
+      @media(min-width:768px){
+        font-size:16px;
+        margin: 0 26px 0 20px;
+      }
     }
     .btn-icon{
       margin-left: 10px;
+      @media (min-width:768px){
+        margin-left: 26px;
+      }
     }
     .btn-arrow{
       background-color: $red-contrast;
       padding: 10px;
+      @media (min-width:768px){
+        padding: 16px;
+      }
     }
   }
+
   &.dark{
     span,
     a{
@@ -166,20 +177,6 @@ p.pre-header{
     }
     .btn-arrow{
       background-color: $dark-grey;
-    }
-  }
-
-  @media (min-width:768px){
-    a p{
-      font-size:16px;
-      margin: 0 26px 0 20px;
-    }
-    .btn-icon{
-      margin-left: 26px;
-    }
-    .btn-arrow{
-      background-color: $red-contrast;
-      padding: 16px;
     }
   }
 
@@ -735,8 +732,9 @@ nav{
       margin-top: 25px;
     }
     @include transition();
+
     &:hover{
-      background-color: $light-grey
+      background-color:#f3f3f3;
     }
 
     @media (min-width:768px){
@@ -1423,6 +1421,8 @@ nav{
   }
 }
 
+
+
 .media-entries.blog-entries{
 
   .d-flex{
@@ -1437,8 +1437,7 @@ nav{
       color:#D1D5DB
     }
     .left-size img{
-      max-width: 360px;
-      height: 360px;
+      width: 100%;
     }
 
     .small-image{
@@ -1477,7 +1476,7 @@ nav{
 
     @media (min-width:1200px){
       .left-size img{
-        max-width: 460px;
+        // max-width: 460px;
       }
     }
   }
@@ -1489,9 +1488,18 @@ nav{
   }
 }
 
+
+
 .blog{
+  padding-bottom:60px;
   background-color: $black800;
   @include bg-img(url("/uploads/siteImages/bg-btm-left.svg"), 0% 120%, contain);
+  
+  .pod-wrapper{
+    max-width:1420px;
+    margin: 0 auto;
+    padding:0;
+  }
   .pods{
     .pod{
       display: flex;
@@ -1509,6 +1517,58 @@ nav{
             margin-bottom: 0px;
         }
       }
+    }
+
+  }
+  .pods.pod-1 .pod{
+    margin-top:40px;
+    border:none;
+    background-color: $red;
+    flex-direction: row;
+    width:100% !important;
+    &:hover{
+      background-color: $red-contrast;
+    }
+    .pre-header{
+      color:$pink-dark;
+    }
+    img{
+      width:100%;
+      max-width: 460px;
+    }
+    > div:first-of-type{
+      display: flex;
+      flex-direction: column;
+      justify-content: space-evenly;
+    }
+
+    > div:last-of-type{
+        max-width: 50%;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        position: relative;
+        align-items: center;
+        .bg-detail{
+          width: 100%;
+          max-width: 300px;
+          margin-top: -41px;
+          margin-bottom: 40px;
+          @media(min-width:992px){
+            margin-top: -70px;
+          }
+          &.bottom{
+            margin-bottom: -41px;
+            margin-top: 40px;
+            @media(min-width:992px){
+              margin-bottom: -70px;
+            }
+          }
+        }
+    }
+
+    @media (min-width:992px){
+      margin-top:40px
     }
   }
 
