--- a/templates/blog/index.twig
+++ b/templates/blog/index.twig
@@ -18,69 +18,73 @@
         </div>
     </div>
 
-    <div class="style-7 pod-wrapper dark">
-        <div class="d-flex  flex-wrap  pods pod-1">
-            <a href='{{ mostRecentPost.url }}' class="pod">
-                <div>
-                    <div>
-                    {% if mostRecentPost.publishDate %}
-                        <p class="pre-header">{{ mostRecentPost.publishDate|date('d-m-Y') }}</p>
-                    {% endif %} 
-
-                    <h3>{{mostRecentPost.title}}</h3>
-
-                    {% if mostRecentPost.blogIntro %}
-                        <p>{{ mostRecentPost.blogIntro}}</p>
-                    {% endif %} 
-                    </div>
-                    <div class="btn dark">
-                        <span>
-                            {% include '_partials/svg/btn-icon-left.svg' %}
-                            <p>Read more</p>
-                            {% include '_partials/svg/btn-icon-arrow.svg' %}
-                        </span>
-                    </div> 
-                </div>
-
-
-                <div>
-                <img src="uploads/siteImages/top-line-svg.svg" class="bg-detail">
-                    {% if mostRecentPost.mediaImage|length %}
-                        {# Assuming "mediaImage" is an asset field associated with the blog post. #}
-                        {% set featureImage = mostRecentPost.mediaImage[0] %}
-                        <img src="{{ featureImage.url }}" alt="Feature Image">
-                    {% endif %}
-                     <img src="uploads/siteImages/bottom-line-svg.svg" class="bg-detail bottom">
-                </div>
-            </a>
-        </div>
-    </div> 
-
-    <div class=" style-7 pod-wrapper">
-        <div class="d-flex  flex-wrap  pods pod-2">
-            {% for post in blog %}
-                <a href='{{ post.url }}' class="pod">
+    <div class="container-fluid" >
+        <div class="wrapper">
+            <div class="style-7 pod-wrapper dark">
+                <div class="d-flex  flex-wrap  pods pod-1">
+                    <a href='{{ mostRecentPost.url }}' class="pod">
                         <div>
-                        {% if post.publishDate %}
-                            <p class="pre-header">{{ post.publishDate|date('d-m-Y') }}</p>
-                        {% endif %} 
+                            <div>
+                            {% if mostRecentPost.publishDate %}
+                                <p class="pre-header">{{ mostRecentPost.publishDate|date('d-m-Y') }}</p>
+                            {% endif %} 
 
-                        <h4>{{post.title}}</h4>
+                            <h3>{{mostRecentPost.title}}</h3>
 
-                        {% if post.blogIntro %}
-                            <p>{{ post.blogIntro}}</p>
-                        {% endif %} 
+                            {% if mostRecentPost.blogIntro %}
+                                <p>{{ mostRecentPost.blogIntro}}</p>
+                            {% endif %} 
+                            </div>
+                            <div class="btn dark">
+                                <span>
+                                    {% include '_partials/svg/btn-icon-left.svg' %}
+                                    <p>Read more</p>
+                                    {% include '_partials/svg/btn-icon-arrow.svg' %}
+                                </span>
+                            </div> 
                         </div>
-                        <div class="btn dark">
-                            <span>
-                                {% include '_partials/svg/btn-icon-left.svg' %}
-                                <p>Read more</p>
-                                {% include '_partials/svg/btn-icon-arrow.svg' %}
-                            </span>
-                        </div> 
 
-                </a>
-            {% endfor %}
+
+                        <div>
+                        <img src="uploads/siteImages/top-line-svg.svg" class="bg-detail">
+                            {% if mostRecentPost.mediaImage|length %}
+                                {# Assuming "mediaImage" is an asset field associated with the blog post. #}
+                                {% set featureImage = mostRecentPost.mediaImage[0] %}
+                                <img src="{{ featureImage.url }}" alt="Feature Image">
+                            {% endif %}
+                            <img src="uploads/siteImages/bottom-line-svg.svg" class="bg-detail bottom">
+                        </div>
+                    </a>
+                </div>
+            </div> 
+
+            <div class=" style-7 pod-wrapper">
+                <div class="d-flex  flex-wrap  pods pod-2">
+                    {% for post in blog %}
+                        <a href='{{ post.url }}' class="pod">
+                                <div>
+                                {% if post.publishDate %}
+                                    <p class="pre-header">{{ post.publishDate|date('d-m-Y') }}</p>
+                                {% endif %} 
+
+                                <h4>{{post.title}}</h4>
+
+                                {% if post.blogIntro %}
+                                    <p>{{ post.blogIntro}}</p>
+                                {% endif %} 
+                                </div>
+                                <div class="btn dark">
+                                    <span>
+                                        {% include '_partials/svg/btn-icon-left.svg' %}
+                                        <p>Read more</p>
+                                        {% include '_partials/svg/btn-icon-arrow.svg' %}
+                                    </span>
+                                </div> 
+
+                        </a>
+                    {% endfor %}
+                </div>
+            </div>
         </div>
     </div>
 </div>
